Bug 1037657 - Handle Bailout_NonSymbolInput in PJS bailout warnings. (r=jorendorff)